[tool.poetry]
name = "yosafe-subpackage-1"
version = "0.2.6"
description = ""
authors = ["Yo581515 <581515@stud.hvl.no>"]
readme = "README.md"
packages = [{include = "yosafe_subpackage_1", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
requests = "^2.32.3"
rich = "^13.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
